add rooms module and config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="labirint">
-  <div *ngFor="let item of dataTemplate.rows" class="row">
-    <div *ngFor="let cell of item" class="cell" [ngClass]="cell.state">
-    </div>
-  </div>
-</div>
+<app-rooms></app-rooms>
