Add class Playingfield

--- a/src/app/rooms/components/rooms/rooms.component.html
+++ b/src/app/rooms/components/rooms/rooms.component.html
@@ -8,5 +8,6 @@
   <div class="message">
     <h3>Rooms:</h3>
     <p>{{showMessages}}</p>
+    <button (click)="generateRoom()">next room</button>
   </div>
 </div>
