--- a/src/app/rooms/components/rooms/rooms.component.scss
+++ b/src/app/rooms/components/rooms/rooms.component.scss
@@ -29,4 +29,13 @@
         margin-top: 4px;
         color: gray;
     }
+
+    button {
+        border: 0;
+        padding: 12px 24px;
+        background: green;
+        color: white;
+        cursor: pointer;
+        border-radius: 4px;
+    }
 }
